--- a/package.json
+++ b/package.json
@@ -11,8 +11,5 @@
     "build": "cd client && npm run build"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "highlight.js": "^11.7.0"
-  }
+  "license": "ISC"
 }
