--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
