--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "build": "cd client && npm run build"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "cypress": "^12.7.0"
+  }
 }
