--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,13 @@
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-jwt": "^8.4.1",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-forge": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
